# Image_processor

./: CMakeLists.txt  image_processor.cpp  readme.md
src/args/: args.cpp  args.h
src/filters/: crop.cpp  edge_detection.cpp  filter.h  grayscale.cpp  matrix_filter.cpp  matrix_filter.h  negative.cpp  registry.h  sharpening.cpp
src/image/: color.cpp  color.h  image.h
src/image_format/: bmp.cpp  bmp.h  format.h
src/io/: reader.cpp  reader.h  writer.cpp  writer.h
src/utils/: matrix.h
